use ShaderProgramFactory