@@ -2,10 +2,10 @@ package com.marginallyclever.ro3.apps.viewport.renderpass;
 
 import com.jogamp.opengl.GL3;
 import com.jogamp.opengl.GLAutoDrawable;
-import com.jogamp.opengl.GLContext;
 import com.marginallyclever.convenience.helpers.MatrixHelper;
 import com.marginallyclever.convenience.helpers.ResourceHelper;
 import com.marginallyclever.ro3.Registry;
+import com.marginallyclever.ro3.apps.viewport.Shader;
 import com.marginallyclever.ro3.apps.viewport.ShaderProgram;
 import com.marginallyclever.ro3.apps.viewport.Viewport;
 import com.marginallyclever.ro3.mesh.Mesh;
@@ -53,21 +53,19 @@ public class DrawJoints extends AbstractRenderPass {
 
     @Override
     public void init(GLAutoDrawable glAutoDrawable) {
-        GL3 gl3 = glAutoDrawable.getGL().getGL3();
         try {
-            shader = new ShaderProgram(gl3,
-                    ResourceHelper.readResource(this.getClass(), "/com/marginallyclever/ro3/apps/viewport/default.vert"),
-                    ResourceHelper.readResource(this.getClass(), "/com/marginallyclever/ro3/apps/viewport/default.frag"));
+            var spf = Registry.shaderProgramFactory;
+            shader = spf.createShaderProgram("jointShader",
+                    spf.createShader(GL3.GL_VERTEX_SHADER, ResourceHelper.readResource(this.getClass(),"/com/marginallyclever/ro3/apps/viewport/default.vert")),
+                    spf.createShader(GL3.GL_FRAGMENT_SHADER, ResourceHelper.readResource(this.getClass(),"/com/marginallyclever/ro3/apps/viewport/default.frag"))
+            );
         } catch(Exception e) {
             logger.error("Failed to load shader", e);
         }
     }
 
     @Override
-    public void dispose(GLAutoDrawable glAutoDrawable) {
-        GL3 gl3 = glAutoDrawable.getGL().getGL3();
-        shader.delete(gl3);
-    }
+    public void dispose(GLAutoDrawable glAutoDrawable) {}
 
     @Override
     public void draw(Viewport viewport, GL3 gl3) {
@@ -96,13 +94,16 @@ public class DrawJoints extends AbstractRenderPass {
 
         var toScan = new ArrayList<>(Registry.getScene().getChildren());
         while(!toScan.isEmpty()) {
-            Node node = toScan.remove(0);
+            Node node = toScan.removeFirst();
             toScan.addAll(node.getChildren());
 
-            if(getActiveStatus()==SOMETIMES && !list.contains(node)) continue;
+            if( getActiveStatus() == SOMETIMES && !list.contains(node) ) continue;
 
-            if(node instanceof HingeJoint joint) renderHinge(gl3,joint,list,originShift,cameraWorldPos);
-            else if(node instanceof LinearJoint joint) renderLinear(gl3,joint,list,originShift,cameraWorldPos);
+            if(node instanceof HingeJoint hinge) {
+                renderHinge(gl3,hinge,list,originShift,cameraWorldPos);
+            } else if(node instanceof LinearJoint linear) {
+                renderLinear(gl3,linear,list,originShift,cameraWorldPos);
+            }
         }
 
         gl3.glEnable(GL3.GL_DEPTH_TEST);
